# whose-turn-is-it

./: Dockerfile  README.md  justfile  pyproject.toml
app/: app.py
templates/: index.html  result.html
